[package]
name = "git-credential-ado-auth"
version = "1.0.0"
edition = "2024"

[dependencies]
azure_core = { version = "0.32.0", default-features = false }
azure_identity = { version = "0.32.0", default-features = false }
clap = { version = "4.5.60", features = ["derive"] }
config = { version = "0.15.19", features = ["ini"] }
home = "0.5.12"
tokio = { version = "1.49.0", features = ["full"] }
url = "2.5.8"
